<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Categories -->
    <string name="button_settings_title">Buttons</string>
    <string name="gesture_settings_title">Gestures</string>
    <string name="lockscreen_settings_title">Lock screen</string>
    <string name="misc_settings_title">Miscellaneous</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="statusbar_settings_title">Status bar</string>
    <string name="notification_settings_title">Notifications</string>

    <!-- Status bar -->
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary_left_edge">Left edge of the status bar pulls down Quick Settings</string>
    <string name="status_bar_quick_qs_pulldown_summary_right_edge">Right edge of the status bar pulls down Quick Settings</string>
    <string name="status_bar_quick_qs_pulldown_off">Off</string>
    <string name="status_bar_quick_qs_pulldown_left">Left</string>
    <string name="status_bar_quick_qs_pulldown_right">Right</string>

    <!-- Status bar - icons -->
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>

    <!-- Status bar - Clock -->
    <string name="status_bar_clock_category_title">Clock</string>
    <string name="status_bar_clock_title">Clock &amp; date</string>
    <string name="status_bar_clock_summary">Customize clock &amp; date</string>
    <string name="status_bar_clock_seconds_title">Clock seconds</string>
    <string name="status_bar_clock_seconds_summary">Display seconds next to clock in status bar</string>
    <string name="status_bar_clock_position_title">Clock style</string>
    <string name="status_bar_clock_position_right">Right</string>
    <string name="status_bar_clock_position_left">Left</string>
    <string name="status_bar_clock_position_center">Center</string>
    <string name="status_bar_clock_position_hidden">Hidden</string>
    <string name="status_bar_clock_auto_hide_title">Auto hide</string>
    <string name="status_bar_clock_auto_hide_launcher_summary">Hide clock if launcher is visible</string>
    <string name="status_bar_clock_auto_hide_summary">Hide clock at regular interval</string>
    <string name="status_bar_clock_auto_hide_hdur_title">Hide duration</string>
    <string name="status_bar_clock_auto_hide_hdur_summary">Number of seconds to hide clock</string>
    <string name="status_bar_clock_auto_hide_sdur_title">Show duration</string>
    <string name="status_bar_clock_auto_hide_sdur_summary">Number of seconds to wait before hiding clock</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden</string>
    <string name="status_bar_clock_position_disabled_summary">Position cannot be changed because traffic indicator is showing in the status bar</string>

    <string name="status_bar_date_title">Date</string>
    <string name="status_bar_date_none">Hidden</string>
    <string name="status_bar_date_small">Small</string>
    <string name="status_bar_date_normal">Normal</string>
    <string name="status_bar_date_format_title">Date format</string>
    <string name="status_bar_date_style">Date style</string>
    <string name="status_bar_date_style_normal">Normal</string>
    <string name="status_bar_date_style_lowercase">Lowercase</string>
    <string name="status_bar_date_style_uppercase">Uppercase</string>
    <string name="status_bar_date_format_custom">Custom java format</string>
    <string name="status_bar_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="status_bar_date_string_edittext_summary">Enter string</string>
    <string name="clock_date_position">Date position</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_font_size_title">Clock font size</string>

    <!-- QS clock -->
    <string name="qs_clock_title">Clock</string>
    <string name="qs_clock_summary">Display clock in quick status bar header</string>

    <!-- QS date -->
    <string name="qs_date_title">Date</string>
    <string name="qs_date_summary">Display date in quick status bar header</string>

    <!-- Status bar - battery -->
    <string name="status_bar_battery_title">Battery indicator</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_rlandscape">Icon landscape (Right)</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape (Left)</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_dotted_circle">Dotted circle</string>
    <string name="status_bar_battery_style_filled_circle">Filled circle</string>
    <string name="status_bar_battery_style_icon_rlandscape_style_a">Landscape R Style A</string>
    <string name="status_bar_battery_style_icon_landscape_style_a">Landscape L Style A</string>
    <string name="status_bar_battery_style_icon_rlandscape_style_b">Landscape R Style B</string>
    <string name="status_bar_battery_style_icon_landscape_style_b">Landscape L Style B</string>
    <string name="status_bar_battery_style_icon_landscape_pill">Portrait Mx</string>
    <string name="status_bar_battery_style_icon_landscape_line">Landscape Lorn</string>
    <string name="status_bar_battery_style_icon_landscape_musku">Portrait IOS</string>
    <string name="status_bar_battery_style_icon_landscape_signal">Landscape Airoo</string>
    <string name="status_bar_battery_style_icon_landscape_buddy">Landscape Capsule</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percent_text_next_right">Next to the icon (right)</string>
    <string name="status_bar_battery_percent_text_next_left">Next to the icon (left)</string>

    <!-- Status bar - Brightness -->
    <string name="status_bar_brightness_category">Brightness</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>

    <!-- QS brightness slider -->
    <string name="status_bar_brightness_slider_title">Brightness slider</string>
    <string name="status_bar_brightness_slider_summary">Adjust brightness from the Quick Settings</string>
    <string name="status_bar_brightness_slider_auto_title">Auto brightness</string>
    <string name="status_bar_brightness_slider_auto_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="qs_brightness_slider_position_title">Brightness slider position</string>
    <string name="qs_brightness_slider_position_top">Top</string>
    <string name="qs_brightness_slider_position_bottom">Bottom</string>

    <!-- Network category -->
    <string name="status_bar_network_category_title">Network</string>

    <!-- Status bar - Network Traffic -->
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_settings_summary">Show current network traffic levels in the status bar</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_mode_disable">Disabled</string>
    <string name="network_traffic_mode_status_bar">Status bar</string>
    <string name="network_traffic_mode_qs">Quick settings</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_units_title">Traffic measurement units</string>
    <string name="network_traffic_units_bits" translatable="false">kbps, Mbps, Gbps</string>
    <string name="network_traffic_units_bytes" translatable="false">kB/s, MB/s, GB/s</string>

    <!-- 4G icon -->
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>

    <!-- Statusbar colored icons -->
    <string name="statusbar_colored_icons_title">Colored icons</string>
    <string name="statusbar_colored_icons_summary">Use proper app icons for notification icons in statusbar</string>

    <!-- Old mobiletype icon style -->
    <string name="old_mobiletype_title">Old style signal icon</string>
    <string name="old_mobiletype_summary">Merge signal and signal type icons</string>

    <!-- Units -->
    <string name="unit_seconds">seconds</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_pixels">dp</string>
    <string name="unit_hz">hz</string>

</resources>
