<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="status_bar_settings"
    android:title="@string/status_bar_title">

    <PreferenceCategory
        android:key="status_bar_network_category"
        android:title="@string/status_bar_network_category_title">

        <Preference
            android:fragment="com.alpha.settings.fragments.statusbar.NetworkTrafficSettings"
            android:key="network_traffic_settings"
            android:title="@string/network_traffic_settings_title"
            android:summary="@string/network_traffic_settings_summary" />

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="show_fourg_icon"
            android:title="@string/show_fourg_icon_title"
            android:summary="@string/show_fourg_icon_summary"
            android:defaultValue="false"/>

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="use_old_mobiletype"
            android:title="@string/old_mobiletype_title"
            android:summary="@string/old_mobiletype_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_icons_title">
        <Preference
            android:key="status_bar_icons"
            android:title="@string/status_bar_system_icons_title"
            android:summary="@string/status_bar_system_icons_summary">
            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
        </Preference>

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="statusbar_colored_icons"
            android:title="@string/statusbar_colored_icons_title"
            android:summary="@string/statusbar_colored_icons_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="status_bar_clock_key"
        android:title="@string/status_bar_clock_category_title">

        <com.android.settings.custom.preference.SystemSettingListPreference
            android:key="status_bar_clock"
            android:title="@string/status_bar_clock_position_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_clock_position_title"
            android:entries="@array/status_bar_clock_position_entries"
            android:entryValues="@array/status_bar_clock_position_values"
            android:defaultValue="2" />

        <Preference
            android:key="clock"
            android:title="@string/status_bar_clock_title"
            android:summary="@string/status_bar_clock_summary"
            android:fragment="com.alpha.settings.fragments.statusbar.Clock" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="status_bar_battery_key"
        android:title="@string/status_bar_battery_title">

        <com.android.settings.custom.preference.SystemSettingListPreference
            android:key="status_bar_battery_style"
            android:title="@string/status_bar_battery_style_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_style_title"
            android:entries="@array/status_bar_battery_style_entries"
            android:entryValues="@array/status_bar_battery_style_values"
            android:defaultValue="0" />

        <com.android.settings.custom.preference.SystemSettingListPreference
            android:key="status_bar_show_battery_percent"
            android:title="@string/status_bar_battery_percentage_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_percentage_title"
            android:entries="@array/status_bar_battery_percentage_entries"
            android:entryValues="@array/status_bar_battery_percentage_values"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_brightness_category"
        android:key="status_bar_brightness_category">

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>
